# complexity-phase-transitions-iqp

./: LICENSE  README.md  requirements.txt
cpp_src/: CMakeLists.txt
cpp_src/src/: iqp_dist_scaled_mpi.cpp
python_src/: erdos_renyi_iqp.py  ham_weights_computer.py  iqp_ham_weights_nq.py  learn_iqp_adam.py  learn_iqp_ngd.py  models.py  natural_gradient.py  save_iqp_wf_nq.py  tree_utils.py  utils.py
